feats: -> added a couple of features, Sidebar menu for small screens, and adjusted text on small screens to display correctly.

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,12 @@ body {
   object-fit: cover;
 }
 
+.morph {
+  background-color: transparent;
+  backdrop-filter: blur(30px);
+  background-image: linear-gradient(148deg, rgba(0, 0, 0, 0.3), rgba(0, 41, 107, 0.2));
+}
+
 @media (min-width: 1024px) {
   .hero-bg {
     background-clip: padding-box;
